--- a/design.css
+++ b/design.css
@@ -90,6 +90,10 @@ body{
     padding-right: 1rem;
 }
 
+#accuracy-storer{
+    display: flex;
+}
+
 .wpm, .accuracy{
     border-right: 0.2px solid hsl(0, 0%, 22%);
 }
@@ -576,5 +580,35 @@ font-family: 'Sora','Poppins','Quicksand';
         margin-right: 0.2rem;
         font-size: 0.9rem;
     }
+
+
+
+    /* Navigation second bar - Details and Controls bar */
+
+
+    .navbar-controls{
+        padding-top: 1.5rem;
+        padding-bottom: 0.6rem;
+        margin-bottom: 1.4rem;
+    }
+
+
+
+    /*Details part*/
+    .show-details{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .details{
+        justify-content: center;
+        align-items: center;
+        margin-left: 1.2rem;
+        padding-right: 1.2rem;
+        flex-direction: column;
+    }
+
+
 
 }
