--- a/design.css
+++ b/design.css
@@ -710,6 +710,123 @@ font-family: 'Sora','Poppins','Quicksand';
 
 
     
+    /* Successful page */
+    .logo-cont-holder{
+        flex-basis: 100%;
+    }
+
+    #maingreen-logo-cont{
+        width:5rem;
+        height: 5rem;
+    }
+
+    .logo-cont{
+        background-color: hsl(140, 63%, 57%, 40%);
+        width:4rem;
+        height: 4rem;
+        border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #success-logo{
+        height: 2.9rem;
+    }
+
+
+        /*Header text in it*/
+    #main-header{
+        font-size: 1.5rem;
+    }
+
+    #belowtext{
+        font-size: 0.83rem;
+    }
+
+
+        /*Success page detail show */
+    .detail-show-cont{
+        flex-direction: column;
+        flex-basis: 100%;
+    }
+
+
+    .show{
+        width: 100%;
+        height: 5.2rem;
+        border-radius: 0.35rem;
+        
+    }
+
+    .detail-show-text{
+        margin: 0.7rem 0.3rem 0.1rem 1.5rem;
+        font-size: 1.2rem;
+        
+    }
+
+    #detail-show-wpm{
+        margin: 0.2rem 0.3rem 0.1rem 1.5rem;
+        font-size: 1.5rem;
+        
+    }
+
+
+
+
+    #detail-show-accuracy{
+        margin: 0.2rem 0.1rem 0.1rem 1.5rem;
+        font-size: 1.5rem;
+    }
+    #detail-show-accuracy-percent{
+        font-size: 1.5rem;
+    }
+
+
+    .detail-show-char{
+        font-size: 1.5rem;
+    }
+
+    #detail-show-char-total{
+        margin-left: 1.5rem;
+        
+    }
+
+        /* Success page restart button area */
+
+    #final-btn{
+        height: 3.4rem;
+        min-width: 11rem;
+        font-size: 1.1rem;
+        z-index: 20;
+    }
+   
+
+
+    #confetti{
+        width: 100%;
+        height: 10rem;
+        position: absolute;
+        left: 0;
+        top: 80%;
+        z-index: 10;
+    }
+
+
+    #star1{
+        height: 2.8rem;
+        width: 2.8rem;
+        top: 88%;
+        left: 80%;
+    }
+
+    #star2{
+        height: 1.6rem;
+        width: 1.6rem;
+        top: 16%;
+        left: 7%;
+       
+    }
 
 
 
