--- a/design.css
+++ b/design.css
@@ -706,7 +706,7 @@ font-family: 'Sora','Poppins','Quicksand';
     min-height: 23rem;
     max-height:24rem ;
     overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-x: auto;
     margin-bottom: 1rem;
     }
 
